--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js": "npm run build:js",
     "build:js": "wp-scripts build",
     "build:css": "node-sass --output-style compressed --recursive -o assets/css src/scss && rm -Rf assets/css/abstracts",
+    "start": "wp-scripts start",
     "img:install": "npm i -g capture-website-cli && chmod +x bin/screenshots",
     "img": "sh bin/screenshots false false",
     "img:dark": "sh bin/screenshots true",
@@ -18,6 +19,7 @@
     "img:theme": "sh bin/screenshots true false"
   },
   "devDependencies": {
+    "@wordpress/icons": "^9.37.0",
     "@wordpress/scripts": "^26.10.0",
     "node-sass": "^8.0.0"
   }
